# TornAnalytics

./: .gitignore  .replit  README.md  app.py  drizzle.config.ts  fetch_trader_ids.py  fix_all_category_pages.sh  fix_all_remaining.sh  fix_card_footer.sh  fix_imports.sh  index.html  items_data.json  package-lock.json  package.json  pyproject.toml  routes.py  tornItems.json  trader_ids.json  trader_ids.txt  update_all_item_links.sh  update_category_pages.sh
TornAnalytics/: .replit
client/src/: App.tsx  index.css
client/src/data/: categoryItems.ts  drugItems.ts
client/src/pages/: alcohol-category-page.tsx  all-items-category-page.tsx  armor-category-page.tsx  artifact-category-page.tsx  bazaar-categories-page.tsx  bazaar-display.tsx  bazaar-fixed.tsx  bazaar-items-page-new.tsx  bazaar-items-page.tsx  bazaar-listings-page.tsx  bazaar-new.tsx  bazaar-simple.tsx  booster-category-page.tsx  candy-category-page.tsx  car-category-page.tsx  category-items.jsx  clothing-category-page.tsx  collectible-category-page.tsx  company-page.tsx  company-search-page.tsx  drug-category-page.tsx  drugs-page.tsx  employees-search-page.tsx  energy-drink-category-page.tsx  enhancer-category-page.tsx  faction-page-fixed.tsx  faction-page.tsx  faction-search-page.tsx  (+17 more)
server/: auth.ts  db.ts  dbStorage.ts  migrate.ts  routes.ts  storage.ts  trader_ids.json
server/middleware/: tornApiKeyMiddleware.ts
server/services/: backgroundBazaarScanner.ts  backgroundCrawler.ts  bazaarItemFinder.ts  bazaarScanner.ts  companyTypes.ts  crawler.ts  tornAPI.ts  tornItemsService.ts
shared/: schema.ts
(+8 files in other folders)
