[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "email-validator>=2.2.0",
    "gunicorn>=23.0.0",
    "openai>=1.82.0",
    "trafilatura>=2.0.0",
    "flask-session>=0.8.0",
    "werkzeug>=3.1.3",
]
